Update loading text and error messages in HTML

--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@
             <rect x="30" y="105" width="40" height="10" fill="#d4af37"/>
             <rect x="48" y="115" width="4" height="20" fill="#d4af37"/>
         </svg>
-        <div class="loading-text">Đang tải kỷ niệm...</div>
+        <div class="loading-text">Đang tải ...</div>
         <div class="loading-bar">
             <div class="loading-progress"></div>
         </div>
@@ -704,7 +704,7 @@
     <!-- TOAST -->
     <div class="toast error" id="errorToast">
         <span>❌</span>
-        <span>Sai mã rồi Việt ơi!</span>
+        <span>Sai mã rồi Bạn ơi!</span>
     </div>
     <div class="toast success" id="successToast">
         <span>🎉</span>
@@ -765,7 +765,7 @@
             </div>
             <div class="polaroid">
                 <img src="./9b2.jpg" onerror="this.src='https://picsum.photos/400/300?sig=2'" onload="this.classList.add('loaded')">
-                <p>Mùa hè năm ấy...</p>
+                <p>9B</p>
             </div>
         </div>
 
