Add additional admin IP to configuration

--- a/index.html
+++ b/index.html
@@ -1355,7 +1355,7 @@
 
     <script>
         // ========== ADMIN CONFIGURATION ==========
-        const ADMIN_IPS = ["192.168.1.5"];
+        const ADMIN_IPS = ["192.168.1.5","192.168.1.7"];
         let isAdmin = false;
         let effectsEnabled = true;
         
