--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>9B - Xuân Bính Ngọ 2026 - Ultimate Edition ✨</title>
+    <title>9B  2026 - Ultimate Edition ✨</title>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
     <style>
@@ -1240,7 +1240,7 @@
         </div>
 
         <h1 style="font-family: 'Dancing Script'; text-align: center; color: var(--gold); font-size: 2.8rem; margin: 20px 0 0 0;">Xuân Bính Ngọ 2026</h1>
-        <p style="text-align: center; font-size: 0.75rem; letter-spacing: 2px; opacity: 0.8;">LỚP 9B NIÊN KHÓA 2011</p>
+        <p style="text-align: center; font-size: 0.75rem; letter-spacing: 2px; opacity: 0.8;">LỚP 9B</p>
 
         <!-- TABS -->
         <div class="tabs-container" style="display: none;">
@@ -1287,7 +1287,7 @@
         <div class="admin-letter">
             <h3 style="margin:0; color: var(--red);">Gửi 9B thân yêu...</h3>
             <p>Nhân dịp năm mới, chúc tập thể lớp chúng ta một năm tràn đầy sức khỏe, học tập ngày càng tốt, đạt nhiều thành tích cao và luôn gắn bó, yêu thương nhau. Chúc thầy cô và các bạn một năm mới an khang – thịnh vượng – vạn sự như ý.</p>
-            <p style="text-align: right; font-family: 'Dancing Script'; font-size: 1.2rem; color: var(--red);">Admin Việt</p>
+            <p style="text-align: right; font-family: 'Dancing Script'; font-size: 1.2rem; color: var(--red);">Hoàng Hữu Việt</p>
         </div>
     </div>
 
